--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="caixa-principal">
-        <h1>Você decide o futuro da IA</h1>
+        <h1>Desigualdade Social</h1>
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
         <div class="caixa-resultado">
@@ -18,3 +18,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
